1.15-1.1.12:
- Command restore actually works now
- Added back support for the XNet channel support
- To avoid an interaction bug with inventory tweaks the modular storage system has been modified to use a locking system where you have to lock you storage item before you can use the modular storage
- The modular storage block can now actually use up to the right amount (so 100 items instead of only 97)

1.15-1.1.11:
- New 'rftoolsstorage restore' command that you can use to restore a lost modular storage card

1.15-1.1.10:
- Update to latest McJtyLib

1.15-1.1.9:
- Fixed a problem on servers

1.1.8:
- Safer client-side registrations (thread-safety)
- Various cleanups and fixes

1.1.7:
- Fixed a potential exploit which could be used to attack a server

1.1.6-beta:
- JEI support for the storage scanner is working again

1.1.5-beta:
- Update for latest McJtyLib

1.1.4-beta:
- Fixed various problems with modular storage. It was mostly broken after last update

1.1.3-beta:
- Fixed a problem in the modular storage where shift-clicking an item into the storage from the gui would void items if the storage was full

1.1.2-beta:
- Fixed a crash in the tooltip of the storage modules

1.1.1-beta:
- Dependency fix

1.1.0-beta:
- Better tooltips
- Re-implemented TOP support for all blocks
- New 'sort mode' button in the Storage Scanner allowing you to sort the items in the list
- Better layout for the Storage Scanner
- Moved the dump and storage control modules from RFTools Utility to RFTools Storage
- The Storage Scanner Module can now be inserted in the RFTools Base tablet giving remote access to the scanner
- Fixed the recipes for the vanilla recipe book
- Moved most of the configs from common to server (so that they are saved with the world and synced to the client)

1.0.3-alpha:
- Re-implemented the filter module for the Modular Storage

1.0.2-alpha:
- Fixed a problem where the storage scanner would not correctly show items with amounts greater than 127