@@ -4,6 +4,7 @@ import mcjty.lib.base.StyleConfig;
 import mcjty.lib.client.GuiTools;
 import mcjty.lib.container.BaseSlot;
 import mcjty.lib.container.GhostOutputSlot;
+import mcjty.lib.container.GhostSlot;
 import mcjty.lib.gui.GenericGuiContainer;
 import mcjty.lib.gui.Window;
 import mcjty.lib.gui.layout.HorizontalAlignment;
@@ -166,6 +167,7 @@ public class GuiModularStorage extends GenericGuiContainer<ModularStorageTileEnt
                 .put(CommandHandler.PARAM_POS, pos)
                 .put(CommandHandler.PARAM_DIMENSION, tileEntity.getDimensionType())
                 .build());
+        getWindowManager().addWindow(craftingGrid.getWindow());
     }
 
     private Panel setupModePanel() {
@@ -623,7 +625,7 @@ public class GuiModularStorage extends GenericGuiContainer<ModularStorageTileEnt
     @Override
     protected void drawStackTooltips(int mouseX, int mouseY) {
         Slot slot = getSelectedSlot(mouseX, mouseY);
-        if (slot instanceof SlotItemHandler && !(slot instanceof BaseSlot)) {
+        if (slot instanceof SlotItemHandler && !(slot instanceof BaseSlot) && !(slot instanceof GhostOutputSlot) && !(slot instanceof GhostSlot)) {
             if (tileEntity.isLocked()) {
                 renderTooltip(TextFormatting.RED + "Unlock to access these slots", mouseX, mouseY);
                 return;
@@ -652,8 +654,8 @@ public class GuiModularStorage extends GenericGuiContainer<ModularStorageTileEnt
             minecraft.getTextureManager().bindTexture(guiElements);
 
             int offset = 300;
-            blit(5, 157, offset, 96, 96, 16, 16, 256, 256);
-            blit(5, 175, offset, 96, 96, 16, 16, 256, 256);
+            blit(5, ySize-79, offset, 96, 96, 16, 16, 256, 256);
+            blit(5, ySize-61, offset, 96, 96, 16, 16, 256, 256);
         }
     }
 
